--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
     <header>
         
-        <h1>roupas</h1>
-        <ul>
-            <li>calçados</li>
+        <h1>loja de roupas </h1>     
+         <ul>
+            
+            <li>roupas,calçados</li>
             <li>cosméticos</li>
         </ul>
     </header>
