--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header>
-        
+        <img src="sam´sloja de roupas" alt="logoloja de roupas">
         <h1>loja de roupas </h1>     
          <ul>
-            
-            <li>roupas,calçados</li>
+            <li>roupas</li>
+            <li>calçados</li>
             <li>cosméticos</li>
         </ul>
     </header>
