--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="sam´sloja de roupas" alt="logoloja de roupas">
         <h1>loja de roupas </h1>     
          <ul>
-            <li>gggroupas</li>
+            <li>roupas</li>
             <li>calçados</li>
             <li>cosméticos</li>
         </ul>
