--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sam`s loja de roupas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="sam´sloja de roupas" alt="logo loja de roupas">
+        <img src="sam´s loja de roupas" alt="logo loja de roupas">
         <h1>loja de roupas </h1>     
          <ul>
             <li>roupas</li>
             <li>calçados</li>
             <li>cosméticos</li>
         </ul>
-    </header>
+    </header> 
 
 </body>
 </html>
