--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="sam´s loja de roupas" alt="logo loja de roupas">
+        <img src="Logo loja.jpg" alt="logo loja.jpg">
         <h1>loja de roupas </h1>     
          <ul>
             <li>roupas</li>
