--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="Logo loja.jpg" alt="logo loja.jpg">
-        <h1>loja de roupas </h1>     
-         <ul>
-            <li>roupas</li>
-            <li>calçados</li>
-            <li>cosméticos</li>
+    <header class="cabecalho"
+        <img class="Logo loja.jpg" alt="logo loja.jpg">
+        <h1class=>loja de roupas </h1>     
+         <ulclass=>
+            <liclass=>roupas</li>
+            <liclass=>calçados</li>
+            <liclass=>cosméticos</li>
         </ul>
     </header> 
 
