--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class="cabecalho"
         <img class="Logo loja.jpg" alt="logo loja.jpg">
-        <h1class=>loja de roupas </h1>     
-         <ulclass=>
-            <liclass=>roupas</li>
-            <liclass=>calçados</li>
-            <liclass=>cosméticos</li>
+        <h1 class="título">loja de roupas </h1>     
+         <ul class="lista">
+            <li class=>roupas</li>
+            <li class=>calçados</li>
+            <li class=>cosméticos</li>
         </ul>
     </header> 
 
