--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho"
-        <img class="Logo loja.jpg" alt="logo loja.jpg">
+        <img ="Logo loja.jpg" alt="logo loja.jpg">
         <h1 class="título">loja de roupas </h1>     
          <ul class="lista">
             <li class=>roupas</li>
