--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho"
-        <img alt="loja de roupas" src="Logo loja.jpg">
+        <img alt="Logo loja.jpg" src="Logo loja.jpg">
         <h1 class="título">loja de roupas </h1>     
          <ul class="lista">
             <li class=>roupas</li>
