--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header class="cabecalho"
         <img alt="Logo loja.jpg" src="Logo loja.jpg">
+        <img src="Logo loja.jpg" alt="Logo loja.jpg">
         <h1 class="título">loja de roupas </h1>     
          <ul class="lista">
             <li class=>roupas</li>
